@@ -110,10 +110,7 @@ add(const bam_record& bamRead,
         BOOST_THROW_EXCEPTION(LogicException(oss.str()));
     }
 
-    if (! bamRead.is_supplement())
-    {
-        targetReadPtr->bamrec = bamRead;
-    }
+    targetReadPtr->bamrec = bamRead;
 
     targetReadPtr->isNode1 = isNode1;
 }
